2002-10-13  Stephane Carrez  <stcarrez@nerim.fr>

	* scripttempl/elfm68hc11.sc: Use KEEP for .vectors, .installN,
	.finiN section.
	* scripttempl/elfm68hc12.sc: Likewise.

2002-10-11  Alan Modra  <amodra@bigpond.net.au>

	* pe-dll.c (make_import_fixup_mark): Avoid type-punned pointer.

	* ldgram.y (memory_spec): Provide empty action.
	(section <NAME>): Likewise.

2002-10-10  Jakub Jelinek  <jakub@redhat.com>

	* ldfile.c (ldfile_try_open_bfd): When searching skip linker scripts if
	they have OUTPUT_FORMAT not matching actual output format.
	* ldlang.c (lang_get_output_target): New function.
	(open_output): Use it.
	* ldlang.h (lang_get_output_target): New prototype.

2002-10-10  Alan Modra  <amodra@bigpond.net.au>

	* emultempl/elf32.em (output_rel_find): Prefer .rel script sections
	when orphan is .rel, .rela when orphan is .rela.
	(gld${EMULATION_NAME}_place_orphan): Handle combreloc .rel* case
	first.  Remove outsecname var.

2002-10-09  Richard Shann <richard.shann@superh.com>
	    Stephen Clarke <stephen.clarke@superh.com>

	* Makefile.am: Add eshelf32_linux.o and
	eshlelf32_linux.o, new emulations for sh64 Linux.
	* Makefile.in: Regenerate.
	* configure.tgt: Add sh64eb-*-linux* and sh64-*-linux* emulations.
	* emulparams/shelf32_linux.sh: New file.
	* emulparams/shlelf32_linux.sh: New file.
	
2002-10-08  H.J. Lu <hjl@gnu.org>

	* ldlang.c (lang_file_exist): Removed.
	(new_afile): Revert the last change.
	* ldlang.h (lang_file_exist): Removed.
	* lexsup.c (parse_args): Revert the last change.

2002-10-07  Ralf Habacker  <Ralf.Habacker@freenet.de>

	* pe-dll.cc (autofilter_symbolprefixlist): Don't re-export
	auto-import symbols.
	(make_one): Create _nm_<symbol> for data only.

2002-10-05  Elias Athanasopoulos  <eathan@otenet.gr>

	* ldlang.c (lang_file_exist): New function.
	(new_afile): Abort if the filename to be added matches the linker 
	output filename.
	* ldlang.h: Add prototype for lang_file_exist.